fix(canary-web-components): fixed css overflow problem in ic-data-table affecting tooltips
removed overflow property from cell-table-row class that was preventing toolwips in table rows from
appearing over the pagination bar

--- a/packages/canary-web-components/src/components/ic-data-table/ic-data-table.css
+++ b/packages/canary-web-components/src/components/ic-data-table/ic-data-table.css
@@ -48,7 +48,6 @@ ic-loading-indicator {
 .table-row-container {
   position: relative;
   height: 100%;
-  overflow: auto;
   transition: var(--ic-easing-transition-fast);
   overflow-anchor: none;
 }
